# guardar_imagenes_turtlebot

./: .gitignore  README.md
src/guardar_imagenes/: CMakeLists.txt  CMakeLists_old.txt  guardar_imagenes.cpp  package.xml  pepito.cpp  pepito.hpp
src/obtener_depth/: CMakeLists.txt  CMakeLists_original.txt  obtener_depth.cpp  obtener_depth_viejo.cpp
